Fixed spacing on mobile postView

--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -1,6 +1,6 @@
-/*main.posts{
-    padding:15vh 0;
-}*/
+main.posts{
+    padding:0vh 0;
+}
 .posts-container{
     display:grid;
     width:100%;
